--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: Welcome to the Joeyel['s homepage!](https://joeyel.github.io/)
+description: More articles to come soon. Feel free to bookmark this to keep an eye on updates. 
